[tool.poetry]
name = "qsvr"
version = "0.1.0"
description = ""
authors = ["vinicyusbrasil <vinicyus.brasil@baritecnologia.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "1.24.4"
scipy = "1.10.1"
gymnasium = "0.29.1"
torch = "2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
